--- a/ClassificationMethods.ipynb
+++ b/ClassificationMethods.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,10 @@
     "\n",
     "#Import dos classificadores\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier \n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.gaussian_process import GaussianProcessClassifier\n",
     "from sklearn.gaussian_process.kernels import RBF\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +325,7 @@
        "[614 rows x 14 columns]"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,30 +352,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "DECISION_TREE = 'Decision Tree'\n",
     "RANDOM_FOREST = 'Random Forest'\n",
     "K_NEIGHBORS = 'k Neighbors'\n",
-    "GAUSSIAN_PROCESS = 'Gaussian Process Classifier - GPC'\n",
     "MLP = \"Multi-layer Perceptron\"\n",
+    "ADA_BOOST = \"AdaBoost\"\n",
     "\n",
     "CLASSIFIERS = {\n",
     "    DECISION_TREE: DecisionTreeClassifier(),\n",
     "    RANDOM_FOREST: RandomForestClassifier(),\n",
     "    K_NEIGHBORS:KNeighborsClassifier(),\n",
-    "    GAUSSIAN_PROCESS:GaussianProcessClassifier(1.0 * RBF(1.0)),\n",
-    "    MLP: MLPClassifier()\n",
+    "    MLP: MLPClassifier(),\n",
+    "    ADA_BOOST: AdaBoostClassifier()\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -415,25 +414,25 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>20</td>\n",
        "      <td>19</td>\n",
-       "      <td>71</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.8160919540229884</td>\n",
-       "      <td>0.7398373983739838</td>\n",
-       "      <td>0.7888888888888889</td>\n",
-       "      <td>0.6060606060606061</td>\n",
+       "      <td>21</td>\n",
+       "      <td>69</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.7976878612716763</td>\n",
+       "      <td>0.7154471544715447</td>\n",
+       "      <td>0.7666666666666667</td>\n",
+       "      <td>0.5757575757575758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
        "      <td>15</td>\n",
-       "      <td>6</td>\n",
-       "      <td>84</td>\n",
+       "      <td>5</td>\n",
+       "      <td>85</td>\n",
        "      <td>18</td>\n",
-       "      <td>0.8749999999999999</td>\n",
-       "      <td>0.8048780487804879</td>\n",
-       "      <td>0.9333333333333333</td>\n",
+       "      <td>0.8808290155440415</td>\n",
+       "      <td>0.8130081300813008</td>\n",
+       "      <td>0.9444444444444444</td>\n",
        "      <td>0.45454545454545453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -450,49 +449,49 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Gaussian Process Classifier - GPC</td>\n",
-       "      <td>33</td>\n",
-       "      <td>89</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.02197802197802198</td>\n",
-       "      <td>0.2764227642276423</td>\n",
-       "      <td>0.011111111111111112</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>Multi-layer Perceptron</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>78</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.6829268292682927</td>\n",
+       "      <td>0.8666666666666667</td>\n",
+       "      <td>0.18181818181818182</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Multi-layer Perceptron</td>\n",
-       "      <td>20</td>\n",
-       "      <td>48</td>\n",
-       "      <td>42</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.5793103448275861</td>\n",
-       "      <td>0.5040650406504065</td>\n",
-       "      <td>0.4666666666666667</td>\n",
-       "      <td>0.6060606060606061</td>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>83</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.869109947643979</td>\n",
+       "      <td>0.7967479674796748</td>\n",
+       "      <td>0.9222222222222223</td>\n",
+       "      <td>0.45454545454545453</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       classificador  VN  FN  VP  FP             Medida-F  \\\n",
-       "0                      Decision Tree  20  19  71  13   0.8160919540229884   \n",
-       "1                      Random Forest  15   6  84  18   0.8749999999999999   \n",
-       "2                        k Neighbors   5  13  77  28   0.7897435897435897   \n",
-       "3  Gaussian Process Classifier - GPC  33  89   1   0  0.02197802197802198   \n",
-       "4             Multi-layer Perceptron  20  48  42  13   0.5793103448275861   \n",
+       "            classificador  VN  FN  VP  FP            Medida-F  \\\n",
+       "0           Decision Tree  19  21  69  14  0.7976878612716763   \n",
+       "1           Random Forest  15   5  85  18  0.8808290155440415   \n",
+       "2             k Neighbors   5  13  77  28  0.7897435897435897   \n",
+       "3  Multi-layer Perceptron   6  12  78  27                 0.8   \n",
+       "4                AdaBoost  15   7  83  18   0.869109947643979   \n",
        "\n",
-       "             Acuracia         Sensibilidade       Especificidade  \n",
-       "0  0.7398373983739838    0.7888888888888889   0.6060606060606061  \n",
-       "1  0.8048780487804879    0.9333333333333333  0.45454545454545453  \n",
-       "2  0.6666666666666666    0.8555555555555555  0.15151515151515152  \n",
-       "3  0.2764227642276423  0.011111111111111112                  1.0  \n",
-       "4  0.5040650406504065    0.4666666666666667   0.6060606060606061  "
+       "             Acuracia       Sensibilidade       Especificidade  \n",
+       "0  0.7154471544715447  0.7666666666666667   0.5757575757575758  \n",
+       "1  0.8130081300813008  0.9444444444444444  0.45454545454545453  \n",
+       "2  0.6666666666666666  0.8555555555555555  0.15151515151515152  \n",
+       "3  0.6829268292682927  0.8666666666666667  0.18181818181818182  \n",
+       "4  0.7967479674796748  0.9222222222222223  0.45454545454545453  "
       ]
      },
-     "execution_count": 251,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,6 +543,7 @@
     "    metrics = np.concatenate((metrics, [getMetrics(classifierName)]))\n",
     "\n",
     "df2 = pd.DataFrame(metrics[1:], columns=metrics[0])\n",
+    "df2.to_csv(f'{rootPath}\\\\metricas.csv')\n",
     "df2"
    ]
   },
