Correção de texto

--- a/ClassificationMethods.ipynb
+++ b/ClassificationMethods.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Métodos de Classificação\n",
     "#### Para alterar o valor que se deseja classificar, altere o valor das variaveis COLUMN e  VALUE (na quarta célula). Esses valores são definidos com base em como o pandas adiciona colunas no dataframe quando a função get_dummies é chamada. Por exemplo, para uma coluna chamada \"Concedido\", que possui apenas valores \"S\" ou \"N\", duas novas colunas são criadas (após a chamada de get_dummies), a saber: Concedido_S e Condedido_N. Dessa forma, pode-se ter COLUMN = 'Concedido' e VALUE = 'S' ou COLUMN = 'Concedido' e VALUE = 'N', caso o objetivo seja classificar a informação da coluna Concedido.\n",
-    "#### Caso queira adicionar um novo metodo classificador, lembrar de importá-lo (na primeira célula, onde contém os 'imports') e adicioná-lo ao dicionário de classificadores (quinta célula)"
+    "#### Caso queira adicionar um novo metodo classificador, lembrar de importá-lo (na primeira célula, onde há os 'imports') e adicioná-lo ao dicionário de classificadores (quinta célula)"
    ]
   },
   {
