--- a/ClassificationMethods.ipynb
+++ b/ClassificationMethods.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,6 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.gaussian_process import GaussianProcessClassifier\n",
-    "from sklearn.gaussian_process.kernels import RBF\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -344,7 +342,7 @@
    "outputs": [],
    "source": [
     "COLUMN = 'Concedido'\n",
-    "VALUE = 'S'\n",
+    "VALUE = 'N'\n",
     "\n",
     "columnValue = f'{COLUMN}_{VALUE}'\n",
     "columnsToDrop = [col for col in numericData.columns if COLUMN in col]"
@@ -352,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -414,84 +412,84 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>19</td>\n",
-       "      <td>21</td>\n",
-       "      <td>69</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0.7976878612716763</td>\n",
-       "      <td>0.7154471544715447</td>\n",
-       "      <td>0.7666666666666667</td>\n",
-       "      <td>0.5757575757575758</td>\n",
+       "      <td>66</td>\n",
+       "      <td>13</td>\n",
+       "      <td>20</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.5194805194805195</td>\n",
+       "      <td>0.6991869918699187</td>\n",
+       "      <td>0.6060606060606061</td>\n",
+       "      <td>0.7333333333333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>15</td>\n",
-       "      <td>5</td>\n",
-       "      <td>85</td>\n",
+       "      <td>84</td>\n",
        "      <td>18</td>\n",
-       "      <td>0.8808290155440415</td>\n",
-       "      <td>0.8130081300813008</td>\n",
-       "      <td>0.9444444444444444</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.5555555555555556</td>\n",
+       "      <td>0.8048780487804879</td>\n",
        "      <td>0.45454545454545453</td>\n",
+       "      <td>0.9333333333333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>k Neighbors</td>\n",
-       "      <td>5</td>\n",
-       "      <td>13</td>\n",
        "      <td>77</td>\n",
        "      <td>28</td>\n",
-       "      <td>0.7897435897435897</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.19607843137254904</td>\n",
        "      <td>0.6666666666666666</td>\n",
-       "      <td>0.8555555555555555</td>\n",
        "      <td>0.15151515151515152</td>\n",
+       "      <td>0.8555555555555555</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Multi-layer Perceptron</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12</td>\n",
-       "      <td>78</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.6829268292682927</td>\n",
-       "      <td>0.8666666666666667</td>\n",
-       "      <td>0.18181818181818182</td>\n",
+       "      <td>74</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.0784313725490196</td>\n",
+       "      <td>0.6178861788617886</td>\n",
+       "      <td>0.06060606060606061</td>\n",
+       "      <td>0.8222222222222222</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AdaBoost</td>\n",
-       "      <td>15</td>\n",
-       "      <td>7</td>\n",
        "      <td>83</td>\n",
        "      <td>18</td>\n",
-       "      <td>0.869109947643979</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.5454545454545454</td>\n",
        "      <td>0.7967479674796748</td>\n",
-       "      <td>0.9222222222222223</td>\n",
        "      <td>0.45454545454545453</td>\n",
+       "      <td>0.9222222222222223</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            classificador  VN  FN  VP  FP            Medida-F  \\\n",
-       "0           Decision Tree  19  21  69  14  0.7976878612716763   \n",
-       "1           Random Forest  15   5  85  18  0.8808290155440415   \n",
-       "2             k Neighbors   5  13  77  28  0.7897435897435897   \n",
-       "3  Multi-layer Perceptron   6  12  78  27                 0.8   \n",
-       "4                AdaBoost  15   7  83  18   0.869109947643979   \n",
+       "            classificador  VN  FN  VP  FP             Medida-F  \\\n",
+       "0           Decision Tree  66  13  20  24   0.5194805194805195   \n",
+       "1           Random Forest  84  18  15   6   0.5555555555555556   \n",
+       "2             k Neighbors  77  28   5  13  0.19607843137254904   \n",
+       "3  Multi-layer Perceptron  74  31   2  16   0.0784313725490196   \n",
+       "4                AdaBoost  83  18  15   7   0.5454545454545454   \n",
        "\n",
-       "             Acuracia       Sensibilidade       Especificidade  \n",
-       "0  0.7154471544715447  0.7666666666666667   0.5757575757575758  \n",
-       "1  0.8130081300813008  0.9444444444444444  0.45454545454545453  \n",
-       "2  0.6666666666666666  0.8555555555555555  0.15151515151515152  \n",
-       "3  0.6829268292682927  0.8666666666666667  0.18181818181818182  \n",
-       "4  0.7967479674796748  0.9222222222222223  0.45454545454545453  "
+       "             Acuracia        Sensibilidade      Especificidade  \n",
+       "0  0.6991869918699187   0.6060606060606061  0.7333333333333333  \n",
+       "1  0.8048780487804879  0.45454545454545453  0.9333333333333333  \n",
+       "2  0.6666666666666666  0.15151515151515152  0.8555555555555555  \n",
+       "3  0.6178861788617886  0.06060606060606061  0.8222222222222222  \n",
+       "4  0.7967479674796748  0.45454545454545453  0.9222222222222223  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
