--- a/ClassificationMethods.ipynb
+++ b/ClassificationMethods.ipynb
@@ -342,7 +342,7 @@
    "outputs": [],
    "source": [
     "COLUMN = 'Concedido'\n",
-    "VALUE = 'N'\n",
+    "VALUE = 'S'\n",
     "\n",
     "columnValue = f'{COLUMN}_{VALUE}'\n",
     "columnsToDrop = [col for col in numericData.columns if COLUMN in col]"
@@ -412,81 +412,81 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>66</td>\n",
-       "      <td>13</td>\n",
-       "      <td>20</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.5194805194805195</td>\n",
-       "      <td>0.6991869918699187</td>\n",
-       "      <td>0.6060606060606061</td>\n",
-       "      <td>0.7333333333333333</td>\n",
+       "      <td>18</td>\n",
+       "      <td>25</td>\n",
+       "      <td>65</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.7647058823529411</td>\n",
+       "      <td>0.6747967479674797</td>\n",
+       "      <td>0.7222222222222222</td>\n",
+       "      <td>0.5454545454545454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>84</td>\n",
-       "      <td>18</td>\n",
-       "      <td>15</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0.5555555555555556</td>\n",
-       "      <td>0.8048780487804879</td>\n",
-       "      <td>0.45454545454545453</td>\n",
-       "      <td>0.9333333333333333</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.8911917098445595</td>\n",
+       "      <td>0.8292682926829268</td>\n",
+       "      <td>0.9555555555555556</td>\n",
+       "      <td>0.48484848484848486</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>k Neighbors</td>\n",
-       "      <td>77</td>\n",
-       "      <td>28</td>\n",
        "      <td>5</td>\n",
        "      <td>13</td>\n",
-       "      <td>0.19607843137254904</td>\n",
+       "      <td>77</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.7897435897435897</td>\n",
        "      <td>0.6666666666666666</td>\n",
-       "      <td>0.15151515151515152</td>\n",
        "      <td>0.8555555555555555</td>\n",
+       "      <td>0.15151515151515152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Multi-layer Perceptron</td>\n",
-       "      <td>74</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0784313725490196</td>\n",
-       "      <td>0.6178861788617886</td>\n",
-       "      <td>0.06060606060606061</td>\n",
-       "      <td>0.8222222222222222</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>80</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.792079207920792</td>\n",
+       "      <td>0.6585365853658537</td>\n",
+       "      <td>0.8888888888888888</td>\n",
+       "      <td>0.030303030303030304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AdaBoost</td>\n",
-       "      <td>83</td>\n",
-       "      <td>18</td>\n",
        "      <td>15</td>\n",
        "      <td>7</td>\n",
-       "      <td>0.5454545454545454</td>\n",
+       "      <td>83</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.869109947643979</td>\n",
        "      <td>0.7967479674796748</td>\n",
-       "      <td>0.45454545454545453</td>\n",
        "      <td>0.9222222222222223</td>\n",
+       "      <td>0.45454545454545453</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            classificador  VN  FN  VP  FP             Medida-F  \\\n",
-       "0           Decision Tree  66  13  20  24   0.5194805194805195   \n",
-       "1           Random Forest  84  18  15   6   0.5555555555555556   \n",
-       "2             k Neighbors  77  28   5  13  0.19607843137254904   \n",
-       "3  Multi-layer Perceptron  74  31   2  16   0.0784313725490196   \n",
-       "4                AdaBoost  83  18  15   7   0.5454545454545454   \n",
+       "            classificador  VN  FN  VP  FP            Medida-F  \\\n",
+       "0           Decision Tree  18  25  65  15  0.7647058823529411   \n",
+       "1           Random Forest  16   4  86  17  0.8911917098445595   \n",
+       "2             k Neighbors   5  13  77  28  0.7897435897435897   \n",
+       "3  Multi-layer Perceptron   1  10  80  32   0.792079207920792   \n",
+       "4                AdaBoost  15   7  83  18   0.869109947643979   \n",
        "\n",
-       "             Acuracia        Sensibilidade      Especificidade  \n",
-       "0  0.6991869918699187   0.6060606060606061  0.7333333333333333  \n",
-       "1  0.8048780487804879  0.45454545454545453  0.9333333333333333  \n",
-       "2  0.6666666666666666  0.15151515151515152  0.8555555555555555  \n",
-       "3  0.6178861788617886  0.06060606060606061  0.8222222222222222  \n",
-       "4  0.7967479674796748  0.45454545454545453  0.9222222222222223  "
+       "             Acuracia       Sensibilidade        Especificidade  \n",
+       "0  0.6747967479674797  0.7222222222222222    0.5454545454545454  \n",
+       "1  0.8292682926829268  0.9555555555555556   0.48484848484848486  \n",
+       "2  0.6666666666666666  0.8555555555555555   0.15151515151515152  \n",
+       "3  0.6585365853658537  0.8888888888888888  0.030303030303030304  \n",
+       "4  0.7967479674796748  0.9222222222222223   0.45454545454545453  "
       ]
      },
      "execution_count": 6,
