--- a/ClassificationMethods.ipynb
+++ b/ClassificationMethods.ipynb
@@ -527,13 +527,13 @@
     "    #Calcula demais metricas\n",
     "    fMeasure = f1_score(yTest, yPred)\n",
     "    accuracy = accuracy_score(yTest, yPred)\n",
-    "    recall = recall_score(yTest, yPred) #recal tambem é chamado de sensibilidade\n",
+    "    recall = recall_score(yTest, yPred) #recall tambem é chamado de sensibilidade\n",
     "    specificity = neg /(neg + falsePos)\n",
     "    \n",
     "    return np.array([classifierName, neg, falseNeg, pos, falsePos, fMeasure, accuracy, recall, specificity])\n",
     "\n",
     "\n",
-    "#Array com metricas do primeiro classificador\n",
+    "#Array com cabeçalho dos dados\n",
     "metrics =[['classificador', 'VN', 'FN', 'VP', 'FP', 'Medida-F', 'Acuracia', 'Sensibilidade', 'Especificidade']]\n",
     "\n",
     "#Calcula metricas dos demais classificadores e adiciona na lista metrics\n",
