--- a/ClassificationMethods.ipynb
+++ b/ClassificationMethods.ipynb
@@ -536,7 +536,7 @@
     "#Array com cabeçalho dos dados\n",
     "metrics =[['classificador', 'VN', 'FN', 'VP', 'FP', 'Medida-F', 'Acuracia', 'Sensibilidade', 'Especificidade']]\n",
     "\n",
-    "#Calcula metricas dos demais classificadores e adiciona na lista metrics\n",
+    "#Calcula metricas dos classificadores e adiciona na lista metrics\n",
     "for classifierName in list(CLASSIFIERS.keys()):\n",
     "    metrics = np.concatenate((metrics, [getMetrics(classifierName)]))\n",
     "\n",
