Adicionando cálculo da precisão

--- a/ClassificationMethods.ipynb
+++ b/ClassificationMethods.ipynb
@@ -25,7 +25,7 @@
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix, f1_score, accuracy_score, recall_score, classification_report\n",
+    "from sklearn.metrics import confusion_matrix, f1_score, accuracy_score, recall_score, precision_score\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -404,6 +404,7 @@
        "      <th>FP</th>\n",
        "      <th>Medida-F</th>\n",
        "      <th>Acuracia</th>\n",
+       "      <th>Precisao</th>\n",
        "      <th>Sensibilidade</th>\n",
        "      <th>Especificidade</th>\n",
        "    </tr>\n",
@@ -413,25 +414,27 @@
        "      <th>0</th>\n",
        "      <td>Decision Tree</td>\n",
        "      <td>18</td>\n",
-       "      <td>25</td>\n",
-       "      <td>65</td>\n",
+       "      <td>20</td>\n",
+       "      <td>70</td>\n",
        "      <td>15</td>\n",
-       "      <td>0.7647058823529411</td>\n",
-       "      <td>0.6747967479674797</td>\n",
-       "      <td>0.7222222222222222</td>\n",
+       "      <td>0.7999999999999999</td>\n",
+       "      <td>0.7154471544715447</td>\n",
+       "      <td>0.8235294117647058</td>\n",
+       "      <td>0.7777777777777778</td>\n",
        "      <td>0.5454545454545454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
-       "      <td>86</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0.8911917098445595</td>\n",
-       "      <td>0.8292682926829268</td>\n",
-       "      <td>0.9555555555555556</td>\n",
-       "      <td>0.48484848484848486</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>85</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.8808290155440415</td>\n",
+       "      <td>0.8130081300813008</td>\n",
+       "      <td>0.8252427184466019</td>\n",
+       "      <td>0.9444444444444444</td>\n",
+       "      <td>0.45454545454545453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -442,20 +445,22 @@
        "      <td>28</td>\n",
        "      <td>0.7897435897435897</td>\n",
        "      <td>0.6666666666666666</td>\n",
+       "      <td>0.7333333333333333</td>\n",
        "      <td>0.8555555555555555</td>\n",
        "      <td>0.15151515151515152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Multi-layer Perceptron</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>80</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.792079207920792</td>\n",
-       "      <td>0.6585365853658537</td>\n",
-       "      <td>0.8888888888888888</td>\n",
-       "      <td>0.030303030303030304</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>60</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.689655172413793</td>\n",
+       "      <td>0.5609756097560976</td>\n",
+       "      <td>0.7142857142857143</td>\n",
+       "      <td>0.6666666666666666</td>\n",
+       "      <td>0.2727272727272727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -466,6 +471,7 @@
        "      <td>18</td>\n",
        "      <td>0.869109947643979</td>\n",
        "      <td>0.7967479674796748</td>\n",
+       "      <td>0.8217821782178217</td>\n",
        "      <td>0.9222222222222223</td>\n",
        "      <td>0.45454545454545453</td>\n",
        "    </tr>\n",
@@ -475,18 +481,25 @@
       ],
       "text/plain": [
        "            classificador  VN  FN  VP  FP            Medida-F  \\\n",
-       "0           Decision Tree  18  25  65  15  0.7647058823529411   \n",
-       "1           Random Forest  16   4  86  17  0.8911917098445595   \n",
+       "0           Decision Tree  18  20  70  15  0.7999999999999999   \n",
+       "1           Random Forest  15   5  85  18  0.8808290155440415   \n",
        "2             k Neighbors   5  13  77  28  0.7897435897435897   \n",
-       "3  Multi-layer Perceptron   1  10  80  32   0.792079207920792   \n",
+       "3  Multi-layer Perceptron   9  30  60  24   0.689655172413793   \n",
        "4                AdaBoost  15   7  83  18   0.869109947643979   \n",
        "\n",
-       "             Acuracia       Sensibilidade        Especificidade  \n",
-       "0  0.6747967479674797  0.7222222222222222    0.5454545454545454  \n",
-       "1  0.8292682926829268  0.9555555555555556   0.48484848484848486  \n",
-       "2  0.6666666666666666  0.8555555555555555   0.15151515151515152  \n",
-       "3  0.6585365853658537  0.8888888888888888  0.030303030303030304  \n",
-       "4  0.7967479674796748  0.9222222222222223   0.45454545454545453  "
+       "             Acuracia            Precisao       Sensibilidade  \\\n",
+       "0  0.7154471544715447  0.8235294117647058  0.7777777777777778   \n",
+       "1  0.8130081300813008  0.8252427184466019  0.9444444444444444   \n",
+       "2  0.6666666666666666  0.7333333333333333  0.8555555555555555   \n",
+       "3  0.5609756097560976  0.7142857142857143  0.6666666666666666   \n",
+       "4  0.7967479674796748  0.8217821782178217  0.9222222222222223   \n",
+       "\n",
+       "        Especificidade  \n",
+       "0   0.5454545454545454  \n",
+       "1  0.45454545454545453  \n",
+       "2  0.15151515151515152  \n",
+       "3   0.2727272727272727  \n",
+       "4  0.45454545454545453  "
       ]
      },
      "execution_count": 6,
@@ -504,7 +517,7 @@
     "def getMetrics(classifierName):\n",
     "    '''\n",
     "        Retorna array com nome do classificador e metricas na seguinte ordem:\n",
-    "        [classificador, VN, FN, VP, FP, Medida-F, Acuracia, Sensibilidade, Especificidade],\n",
+    "        [classificador, VN, FN, VP, FP, Medida-F, Acuracia, Precisao, Sensibilidade, Especificidade],\n",
     "        \n",
     "        sendo: \n",
     "        VN: Verdadeiro Negativo\n",
@@ -527,14 +540,15 @@
     "    #Calcula demais metricas\n",
     "    fMeasure = f1_score(yTest, yPred)\n",
     "    accuracy = accuracy_score(yTest, yPred)\n",
+    "    precision = precision_score(yTest, yPred)\n",
     "    recall = recall_score(yTest, yPred) #recall tambem é chamado de sensibilidade\n",
     "    specificity = neg /(neg + falsePos)\n",
     "    \n",
-    "    return np.array([classifierName, neg, falseNeg, pos, falsePos, fMeasure, accuracy, recall, specificity])\n",
+    "    return np.array([classifierName, neg, falseNeg, pos, falsePos, fMeasure, accuracy,precision, recall, specificity])\n",
     "\n",
     "\n",
     "#Array com cabeçalho dos dados\n",
-    "metrics =[['classificador', 'VN', 'FN', 'VP', 'FP', 'Medida-F', 'Acuracia', 'Sensibilidade', 'Especificidade']]\n",
+    "metrics =[['classificador', 'VN', 'FN', 'VP', 'FP', 'Medida-F', 'Acuracia','Precisao', 'Sensibilidade', 'Especificidade']]\n",
     "\n",
     "#Calcula metricas dos classificadores e adiciona na lista metrics\n",
     "for classifierName in list(CLASSIFIERS.keys()):\n",
